--- a/orbmain/pom.xml
+++ b/orbmain/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
           <groupId>org.glassfish.gmbal</groupId>
-          <artifactId>gmbal-api-only</artifactId>
+          <artifactId>gmbal</artifactId>
           <version>${gmbal-version}</version>
         </dependency>
         <dependency>
