--- a/csiv2-idl/pom.xml
+++ b/csiv2-idl/pom.xml
@@ -44,7 +44,7 @@
     <parent>
         <groupId>org.glassfish.corba</groupId>
         <artifactId>glassfish-corba</artifactId>
-        <version>4.1.1.payara-p3</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>glassfish-corba-csiv2-idl</artifactId>
