--- a/exception-annotation-processor/pom.xml
+++ b/exception-annotation-processor/pom.xml
@@ -46,7 +46,7 @@
     <parent>
         <groupId>org.glassfish.corba</groupId>
         <artifactId>glassfish-corba</artifactId>
-        <version>4.1.1.payara-p3</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>exception-annotation-processor</artifactId>
