--- a/internal-api/pom.xml
+++ b/internal-api/pom.xml
@@ -45,7 +45,7 @@
     <parent>
         <artifactId>glassfish-corba</artifactId>
         <groupId>org.glassfish.corba</groupId>
-        <version>4.1.1.payara-p3</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
