--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
     <groupId>org.glassfish.corba</groupId>
     <artifactId>glassfish-corba</artifactId>
-    <version>4.1.1.payara-p3</version>
+    <version>4.2.1-SNAPSHOT</version>
     <name>ORB Implementation</name>
     <packaging>pom</packaging>
     <description>A CORBA ORB for Glassfish</description>
@@ -114,7 +114,7 @@
         <maven.compiler.target>${jdkVersion}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.dynamicAnalysis>false</sonar.dynamicAnalysis>
-        <pfl-version>4.1.0</pfl-version>
+        <pfl-version>4.0.1</pfl-version>
         <gmbal-version>4.0.0</gmbal-version>
     </properties>
 
