--- a/orbmain/pom.xml
+++ b/orbmain/pom.xml
@@ -50,7 +50,6 @@
 
     <artifactId>glassfish-corba-orb</artifactId>
     <name>GlassFish Corba ORB</name>
-    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
@@ -107,14 +106,17 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.meterware.simplestub</groupId>
             <artifactId>simplestub</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
