--- a/rmic/src/main/resources/org/glassfish/rmic/tools/javac/resources/javac.properties
+++ b/rmic/src/main/resources/org/glassfish/rmic/tools/javac/resources/javac.properties
@@ -1,4 +1,5 @@
 #
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 # Copyright (c) 1996, 2019, Oracle and/or its affiliates. All rights reserved.
 #
 # Copyright (c) 1996-2018 Oracle and/or its affiliates. All rights reserved.
