enable build and unit test on jdk11
Signed-off-by: Russell Gold <russell.gold@oracle.com>

--- a/csiv2-idl/pom.xml
+++ b/csiv2-idl/pom.xml
@@ -1,8 +1,6 @@
 <!--
 
-    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
-
-    Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -51,6 +49,14 @@
 
     <artifactId>glassfish-corba-csiv2-idl</artifactId>
     <name>Generated CSIv2 APIs</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>glassfish-corba-omgapi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
