--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,6 @@
 <!--
 
-    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
-
-    Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -108,7 +106,6 @@
         <module>exception-annotation-processor</module>
         <module>orbmain</module>
         <module>internal-api</module>
-        <module>functional-tests</module>
     </modules>
 
     <properties>
@@ -472,6 +469,14 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+        <profile>
+          <id>legacy-functional-test</id>
+            <activation>
+                <jdk>(,1.8]</jdk>
+            </activation>
+          <modules>
+              <module>functional-tests</module>
+          </modules>
+        </profile>    </profiles>
 </project>
 
