--- a/rmic/src/main/resources/org/glassfish/rmic/tools/javac/resources/javac.properties
+++ b/rmic/src/main/resources/org/glassfish/rmic/tools/javac/resources/javac.properties
@@ -1,5 +1,5 @@
 #
-# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+# Copyright (c) 1996, 2019, Oracle and/or its affiliates. All rights reserved.
 #
 # Copyright (c) 1996-2018 Oracle and/or its affiliates. All rights reserved.
 #
@@ -595,7 +595,7 @@ javac.err.version.too.old=\
 	The major version ''{0}'' is too old for this tool to understand.
 javac.err.version.too.recent=\
 	The major.minor version ''{0}'' is too recent for this tool \
-	to understand.
+	to understand. Use nothing later than ''{1}''.
 #
 benv.parsed_in=[parsed {0} in {1} ms]
 benv.loaded_in=[loaded {0} in {1} ms]
