--- a/pom.xml
+++ b/pom.xml
@@ -358,7 +358,7 @@
 
         <!-- During release, always build with specified JDK -->
         <profile>
-            <id>jvnet-release</id>
+            <id>oss-release</id>
             <build>
                 <plugins>
                     <plugin>
