--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
     <groupId>org.glassfish.corba</groupId>
     <artifactId>glassfish-corba</artifactId>
-    <version>4.2.1</version>
+    <version>4.2.1.payara-p1</version>
     <name>ORB Implementation</name>
     <packaging>pom</packaging>
     <description>A CORBA ORB for Glassfish</description>
@@ -64,10 +64,10 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:https://github.com/javaee/glassfish-corba.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/javaee/glassfish-corba.git</developerConnection>
-        <url>https://github.com/javaee/glassfish-corba</url>
-        <tag>glassfish-corba-4.2.0-b007</tag>
+        <connection>scm:git:https://github.com/payara/patched-src-glassfish-corba.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/payara/patched-src-glassfish-corba.git</developerConnection>
+        <url>https://github.com/payara/patched-srcglassfish-corba</url>
+        <tag>glassfish-corba-4.2.1.payara-p1</tag>
     </scm>
 
     <distributionManagement>
@@ -260,7 +260,7 @@
                         <dependency>
                             <groupId>org.glassfish.corba</groupId>
                             <artifactId>rmic</artifactId>
-                            <version>4.0.2-b007</version>
+			    <version>${project.version}</version>
                         </dependency>
                     </dependencies>
                 </plugin>
