--- a/rmic/pom.xml
+++ b/rmic/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <groupId>org.glassfish.corba</groupId>
         <artifactId>glassfish-corba</artifactId>
-        <version>4.2.1-SNAPSHOT</version>
+        <version>4.2.1.payara-p1</version>
     </parent>
 
     <artifactId>rmic</artifactId>
